# test_task_for_interview

./: .flake8  README.MD  TASK.MD  noxfile.py  pyproject.toml  tests.py
results/: basic_results.tsv
test_task/: handlers.py  main.py  record.py
