[tool.poetry]
name = "test_task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
ijson = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"

[tool.poetry.scripts]
create_files = "test_task.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
